nvaqa 1st commit